agregado las librerias y modulos necesarios al proyecto

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -1,2 +1,27 @@
-<html>
+<!DOCTYPE html>
+<html lang="en" ng-app="complejo">
+<head>
+	<meta charset="UTF-8">
+	<title>Canchas</title>
+
+	
+</head>
+<body>
+	
+
+
+	<!-- SCRIPTS DE LA APLICACION -->
+
+	<!-- SCRIPTS MODULO ADMIN -->
+	<script src="app/admin/admin.module.js"></script>
+
+	<!-- SCRIPTS MODULO VISITANTES -->
+	<script src="app/visitante/visitante.module.js"></script>
+	
+	<!-- SCRIPTS MODULO CLIENTE -->
+	<script src="app/cliente/cliente.module.js"></script>
+	
+
+
+</body>
 </html>
