creado los modulos principales del proyecto con angular js

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -1,16 +1,51 @@
 <!DOCTYPE html>
 <html lang="en" ng-app="complejo">
 <head>
-	<meta charset="UTF-8">
-	<title>Canchas</title>
-
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+
+	<meta charset="UTF-8">
+
+	<!-- BOOTSTRAP CSS -->
+	<link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap.min.css">
+	<!-- <link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap-theme.min.css"> -->
+
+	<!-- ANGULAR JS NATIVE -->
+	<script src="lib/angular/angular1.4.7.min.js"></script>
+
+	<!-- RESOURCE ANGULAR JS SERVICE -->
+	<script src="lib/angular-resource/angular-resource.min.js"></script>
+
+	<!-- MOMENT JS -->
+	<script src="lib/moment/moment2.10.6.min.js"></script>
+
+	<!-- UNDERSCORE JS -->
+	<script src="lib/underscore/underscore1.8.3.min.js"></script>
+
+	<!-- UI-ROUTER ANGULAR JS 0.2.15-->
+	<script src="lib/ui-router/angular-ui-router.min.js"></script>
+
+	<!-- ANGULAR STORAGE -->
+	<script src="lib/angular-storage/angular-storage.min.js"></script>
+
+	<!-- ANGULAR JWT -->
+	<script src="lib/angular-jwt/angular-jwt.min.js"></script>
+
+	<!-- UI bootstrap -->
+	<script src="lib/ui-bootstrap/ui-bootstrap-0.14.2.min.js"></script>
+	<script src="lib/ui-bootstrap/ui-bootstrap-tpls-0.14.2.min.js"></script>
+
+	<title>Canchas</title>
+	
+
 </head>
 <body>
 	
 
 
 	<!-- SCRIPTS DE LA APLICACION -->
+	<script src="app/app.module.js"></script>
 
 	<!-- SCRIPTS MODULO ADMIN -->
 	<script src="app/admin/admin.module.js"></script>
@@ -20,8 +55,19 @@
 	
 	<!-- SCRIPTS MODULO CLIENTE -->
 	<script src="app/cliente/cliente.module.js"></script>
+
+	<!-- SCRIPTS MODULO SERVICIOS -->
+	<script src="app/servicios/servicios.module.js"></script>
+
+	<!-- SCRIPTS DE LA APLICACION -->
+
 	
 
+	<!-- SCRIPTS PARA BOOTSTRAP -->
+	<!-- JQUERY  -->
+	<script src="lib/jquery/jquery.min.js"></script>
 
+	<!-- BOOTSTRAP JS -->
+	<script src="lib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
 </body>
 </html>
