control de acceso implementado

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -74,6 +74,7 @@
 	<!-- SCRIPTS MODULO SERVICIOS -->
 	<script src="app/servicios/servicios.module.js"></script>
 	<script src="app/servicios/autorizacion.service.js"></script>
+	<script src="app/servicios/constantes.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
