--- a/complejoapp/app/visitante/login/login.html
+++ b/complejoapp/app/visitante/login/login.html
@@ -3,17 +3,22 @@
 	<form novalidate name="loginForm" ng-submit="submitLogin(user)">
 		<legend>Formulario de login</legend>
 	
-		<div class="form-group has-error">
+		<div class="form-group" ng-class="{'has-error': loginForm.nombreusuario.$invalid && !loginForm.nombreusuario.$pristine, 
+		'has-success' : loginForm.nombreusuario.$valid}"
+		>
 			<label class="control-label">Nombre Usuario</label>
-			<input type="text" class="form-control" ng-model="user.nombreusuario" placeholder="Nombre de Usuario">
+			<input type="text" class="form-control" name = "nombreusuario" ng-model="user.nombreusuario" required placeholder="Nombre de Usuario">
+			<p ng-show="loginForm.nombreusuario.$error.required" class="help-block">El nombre de usuario es requerido</p>
 		</div>
 
-		<div class="form-group has-success">
+		<div class="form-group" ng-class="{'has-error' : loginForm.contrasena.$invalid && !loginForm.contrasena.$pristine,
+		'has-success': loginForm.contrasena.$valid}">
 			<label class="control-label">Contrasena</label>
-			<input type="text" class="form-control" ng-model="user.contrasena" placeholder="Contrasena">
+			<input type="password" class="form-control" name= "contrasena" ng-model="user.contrasena" required placeholder="Contrasena">
+			<p ng-show="loginForm.contrasena.$error.required" class="help-block">La contrasenia es requerida</p>
 		</div>
 	
-		<button type="submit" class="btn btn-primary">Iniciar Sesion</button>
+		<button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Iniciar Sesion</button>
 	</form>
 	
 </div>
