implementado el servicio de disciplinas

--- a/complejoapp/app/visitante/login/login.html
+++ b/complejoapp/app/visitante/login/login.html
@@ -20,5 +20,8 @@
 	
 		<button type="submit" ng-disabled="loginForm.$invalid" class="btn btn-primary">Iniciar Sesion</button>
 	</form>
+
+	<button type="button" class="btn btn-default" ng-click="salir()">button</button>
+	
 	
 </div>
