--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -75,6 +75,7 @@
 	<script src="app/servicios/servicios.module.js"></script>
 	<script src="app/servicios/autorizacion.service.js"></script>
 	<script src="app/servicios/constantes.js"></script>
+	<script src="app/servicios/disciplina.service.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
