--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -61,6 +61,7 @@
 	<!-- SCRIPTS MODULO ADMIN -->
 	<script src="app/admin/admin.module.js"></script>
 	<script src="app/admin/admin.routes.js"></script>
+	<script src="app/admin/registro-campo/registro-campo.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -77,6 +78,10 @@
 	<script src="app/servicios/constantes.js"></script>
 	<script src="app/servicios/disciplina.service.js"></script>
 	<script src="app/servicios/superficie.service.js"></script>
+
+	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
+	<script src="common/common.module.js"></script>
+	<script src="common/cabecera-pagina/cabecera-pagina.directive.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
