--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -62,6 +62,7 @@
 	<script src="app/admin/admin.module.js"></script>
 	<script src="app/admin/admin.routes.js"></script>
 	<script src="app/admin/registro-campo/registro-campo.controller.js"></script>
+	<script src="app/admin/admin-layout.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -78,6 +79,7 @@
 	<script src="app/servicios/constantes.js"></script>
 	<script src="app/servicios/disciplina.service.js"></script>
 	<script src="app/servicios/superficie.service.js"></script>
+	<script src="app/servicios/complejo.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
