--- a/complejoapp/app/admin/admin.layout.html
+++ b/complejoapp/app/admin/admin.layout.html
@@ -12,7 +12,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">ADMINISTRADOR</a>
+                <a class="navbar-brand" href="index.html">{{usuario.rol | uppercase}}</a>
             </div>
             <!-- Top Menu Items -->
             <ul class="nav navbar-right top-nav">
@@ -42,13 +42,13 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a href="" class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> {{usuario.nombreusuario}} <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li>
                             <a href=""><i class="fa fa-fw fa-user"></i> Perfil</a>
                         </li>
                         <li class="divider"></li>
-                        <li>
+                        <li ng-click="cerrarSesion()">
                             <a href=""><i class="fa fa-fw fa-power-off"></i> Cerrar Sesion</a>
                         </li>
                     </ul>
@@ -58,7 +58,7 @@
             <div class="collapse navbar-collapse navbar-ex1-collapse">
                 <ul class="nav navbar-nav side-nav">
                     <li class="active">
-                        <a href=""><i class="fa fa-fw fa-dashboard"></i> Inicio</a>
+                        <a ui-sref="app.admin.inicio"><i class="fa fa-fw fa-dashboard"></i> Inicio</a>
                     </li>
                     <li>
                         <a href=""><i class="fa fa-fw fa-bar-chart-o"></i> Reportes</a>
@@ -67,7 +67,7 @@
                         <a href=""><i class="fa fa-fw fa-table"></i> Tablas</a>
                     </li>
                     <li>
-                        <a href=""><i class="fa fa-fw fa-edit"></i> Formularios</a>
+                        <a ui-sref="app.admin.registrar-campo"><i class="fa fa-fw fa-edit"></i> Registrar Campo</a>
                     </li>
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Reservas <i class="fa fa-fw fa-caret-down"></i></a>
