implementado las notificaciones y validaciones para agregar campos

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -10,6 +10,7 @@
 	<!-- BOOTSTRAP CSS -->
 	<link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="common/subir-archivo/subir-archivo.directive.css">
+	<link rel="stylesheet" href="lib/notifications/angular-ui-notification.min.css">
 	<!-- <link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap-theme.min.css"> -->
 
 	<!-- ESTILOS PARA EL ADMINISTRADOR (NECESITA LOS FONTS) -->
@@ -22,6 +23,9 @@
 
 	<!-- RESOURCE ANGULAR JS SERVICE -->
 	<script src="lib/angular-resource/angular-resource.min.js"></script>
+
+	<!-- NOTIFICATIONS -->
+	<script src="lib/notifications/angular-ui-notification.min.js"></script>
 
 	<!-- MOMENT JS -->
 	<script src="lib/moment/moment2.10.6.min.js"></script>
