--- a/complejoapp/common/subir-archivo/subir-archivo.directive.html
+++ b/complejoapp/common/subir-archivo/subir-archivo.directive.html
@@ -4,7 +4,7 @@
     	Buscar Archivo <input id="subir-archivo" type="file">
 	</span>	
 
-	<canvas id="imagen" style="border : 1px solid green; display : block; width : 100%;">
+	<canvas id="imagen" style="border : 1px solid #5cb85c; display : block; width : 100%;">
 		no soporta canvas
 	</canvas>
 </div>
