--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -10,6 +10,7 @@
 	<!-- BOOTSTRAP CSS -->
 	<link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" href="common/subir-archivo/subir-archivo.directive.css">
+	<!-- ESTILOS PARA NOTIFICACIONES -->
 	<link rel="stylesheet" href="lib/notifications/angular-ui-notification.min.css">
 	<!-- <link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap-theme.min.css"> -->
 
@@ -68,6 +69,7 @@
 	<script src="app/admin/admin.routes.js"></script>
 	<script src="app/admin/registro-campo/registro-campo.controller.js"></script>
 	<script src="app/admin/admin-layout.controller.js"></script>
+	<script src="app/admin/reserva/reserva.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -86,6 +88,7 @@
 	<script src="app/servicios/superficie.service.js"></script>
 	<script src="app/servicios/complejo.service.js"></script>
 	<script src="app/servicios/campo.service.js"></script>
+	<script src="app/servicios/reserva.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
