implementado los servicios para las reservas y clientes

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -14,6 +14,9 @@
 	<link rel="stylesheet" href="lib/notifications/angular-ui-notification.min.css">
 	<!-- <link rel="stylesheet" href="lib/bootstrap-3.3.6/css/bootstrap-theme.min.css"> -->
 
+	<!-- ESTILOS EASYCAL (CALENDARIO SEMANAL)-->
+	<link rel="stylesheet" href="lib/easycal/easycal.css">
+
 	<!-- ESTILOS PARA EL ADMINISTRADOR (NECESITA LOS FONTS) -->
 	<link rel="stylesheet" href="css/sb-admin.css">
 	<link rel="stylesheet" href="css/font-awesome.min.css">
@@ -51,7 +54,7 @@
 	
 
 </head>
-<body>
+<body>S
 
 	<!-- VISTA PARA LAS RUTAS PRINCIPALES -->
 	<div ui-view></div>
@@ -94,6 +97,7 @@
 	<script src="common/common.module.js"></script>
 	<script src="common/cabecera-pagina/cabecera-pagina.directive.js"></script>
 	<script src="common/subir-archivo/subir-archivo.directive.js"></script>
+	<script src="common/calendario/calendario.directive.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
@@ -105,5 +109,8 @@
 
 	<!-- BOOTSTRAP JS -->
 	<script src="lib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
+
+	<!-- EASYCAL JS -->
+	<script src="lib/easycal/easycal.js"></script>
 </body>
 </html>
