--- a/complejoapp/app/admin/reserva/reserva.view.html
+++ b/complejoapp/app/admin/reserva/reserva.view.html
@@ -1,3 +1,12 @@
 <!-- Reserva view -->
 
 <cd-cabecera-pagina nombrecomplejo="{{nombre}}" datospagina="datospagina"></cd-cabecera-pagina>
+
+<div class="row">
+	<div class="col-lg-12">
+
+		<div ng-if="mostrar">
+			<cd-calendario reservas="reservas" prueba="prueba"></cd-calendario>	
+		</div>
+	</div>
+</div>
