--- a/complejoapp/app/admin/reserva/reserva.view.html
+++ b/complejoapp/app/admin/reserva/reserva.view.html
@@ -4,6 +4,10 @@
 
 <div class="row">
 	<div class="col-lg-12">
+		<select class="form-control" ng-model="campo"
+        ng-change="actualizarReservas(campo)" 
+        ng-options="campo as campo.nombre for campo in  campos">
+        </select>
 
 		<div ng-if="mostrar">
 			<cd-calendario reservas="reservas" prueba="prueba"></cd-calendario>	
