--- a/complejoapp/common/calendario/calendario.view.html
+++ b/complejoapp/common/calendario/calendario.view.html
@@ -1,4 +1,21 @@
-<div class="ho">
+<div class="rho">
+
+	<div class="row">
+		<div class="col-md-12">
+			<div class="btn-group btn-group-justified" role="group" aria-label="...">
+				<div class="btn-group" role="group">
+				<button type="button" class="btn btn-default" id="anterior">Anterior</button>
+				</div>
+				<div class="btn-group" role="group">
+					<button type="button" class="btn btn-default" id="actual">Actual</button>
+				</div>
+				<div class="btn-group" role="group">
+					<button type="button" class="btn btn-default" id="siguiente">Siguiente</button>
+				</div>
+			</div>
+		</div>
+	</div>
+	
 
 	<div class="mycal" style="width:100%;"></div>
 </div>
