implementado el renderizado de las reservas en el calendario semanal

--- a/complejoapp/common/calendario/calendario.view.html
+++ b/complejoapp/common/calendario/calendario.view.html
@@ -1,4 +1,4 @@
-<div class="ho">
+<div class="calendario">
 
 	<div class="row">
 		<div class="col-md-12">
@@ -7,7 +7,7 @@
 	        ng-change="actualizarReservas(campoSeleccionado)" 
 	        ng-options="campo as campo.nombre for campo in  campos">
 	        </select>
-	        
+
 			<div class="btn-group btn-group-justified" role="group" aria-label="...">
 				<div class="btn-group" role="group">
 				<button type="button" class="btn btn-default" id="anterior">Anterior</button>
@@ -23,5 +23,5 @@
 	</div>
 	
 
-	<div class="mycal" style="width:100%;"></div>
+	<div class="calendarioSemanal" style="width:100%;"></div>
 </div>
