--- a/complejoapp/app/admin/reserva/reserva.view.html
+++ b/complejoapp/app/admin/reserva/reserva.view.html
@@ -4,13 +4,6 @@
 
 <div class="row">
 	<div class="col-lg-12">
-		<select class="form-control" ng-model="campoSeleccionado"
-        ng-change="actualizarReservas(campoSeleccionado)" 
-        ng-options="campo as campo.nombre for campo in  campos">
-        </select>
-
-		<div ng-if="mostrar">
-			<cd-calendario reservas="reservas"></cd-calendario>	
-		</div>
+		<cd-calendario ng-if="listo" complejo="complejo"></cd-calendario>	
 	</div>
 </div>
