--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -99,6 +99,7 @@
 	<script src="common/cabecera-pagina/cabecera-pagina.directive.js"></script>
 	<script src="common/subir-archivo/subir-archivo.directive.js"></script>
 	<script src="common/calendario/calendario.directive.js"></script>
+	<script src="common/calendario/calendario.service.js"></script>
 	<script src="common/hora-filtro/hora.filtro.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
