implementado la integracion de la vista de reserva con los servicios de codeigniter, reservas se pueden realizar

--- a/complejoapp/app/admin/registro-campo/registro-campo.view.html
+++ b/complejoapp/app/admin/registro-campo/registro-campo.view.html
@@ -46,6 +46,7 @@
 							<cd-subir-archivo></cs-subir-archivo>
 						</div>
 					</div>	
+					{{clienteSeleccionado}}
 				</div>	
 				
 			</div>	
