implementado el diseno del formulario y validaciones para los campos

--- a/complejoapp/app/admin/admin.layout.html
+++ b/complejoapp/app/admin/admin.layout.html
@@ -64,10 +64,13 @@
                         <a href="" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-bar-chart-o"></i> Reportes</a>
                     </li>
                     <li>
-                        <a ui-sref="app.admin.reserva" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-table"></i> Tablas</a>
+                        <a ui-sref="app.admin.reserva" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-table"></i> Realizar Reserva</a>
                     </li>
                     <li>
                         <a ui-sref="app.admin.registrar-campo" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-edit"></i> Registrar Campo</a>
+                    </li>
+                    <li>
+                        <a ui-sref="app.admin.registrar-cliente" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-users"></i> Registro Clientes</a>
                     </li>
                     <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Reservas <i class="fa fa-fw fa-caret-down"></i></a>
