--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -73,6 +73,7 @@
 	<script src="app/admin/registro-campo/registro-campo.controller.js"></script>
 	<script src="app/admin/admin-layout.controller.js"></script>
 	<script src="app/admin/reserva/reserva.controller.js"></script>
+	<script src="app/admin/registro-cliente/registro-cliente.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
