refactorizado la carga de datos en la ruta de administrador

--- a/complejoapp/app/admin/admin.layout.html
+++ b/complejoapp/app/admin/admin.layout.html
@@ -73,6 +73,9 @@
                         <a ui-sref="app.admin.registrar-cliente" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-users"></i> Registro Clientes</a>
                     </li>
                     <li>
+                        <a ui-sref="app.admin.reserva-especial" data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class="fa fa-fw fa-tablet"></i> Reserva Especial</a>
+                    </li>
+                    <li>
                         <a href="javascript:;" data-toggle="collapse" data-target="#demo"><i class="fa fa-fw fa-arrows-v"></i> Reservas <i class="fa fa-fw fa-caret-down"></i></a>
                         <ul id="demo" class="collapse">
                             <li>
