--- a/complejoapp/app/admin/reserva/reserva.view.html
+++ b/complejoapp/app/admin/reserva/reserva.view.html
@@ -1,6 +1,6 @@
 <!-- Reserva view -->
 
-<cd-cabecera-pagina nombrecomplejo="{{nombre}}" datospagina="datospagina"></cd-cabecera-pagina>
+<cd-cabecera-pagina nombrecomplejo="{{complejo.nombre}}" datospagina="datospagina"></cd-cabecera-pagina>
 
 <div class="row">
 	<div class="col-lg-12">
