--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -95,6 +95,7 @@
 	<script src="app/servicios/campo.service.js"></script>
 	<script src="app/servicios/reserva.service.js"></script>
 	<script src="app/servicios/cliente.service.js"></script>
+	<script src="app/servicios/reserva-especial.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
