implementado los servicios para imprimir las facturas

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -75,6 +75,8 @@
 	<script src="app/admin/reserva/reserva.controller.js"></script>
 	<script src="app/admin/registro-cliente/registro-cliente.controller.js"></script>
 	<script src="app/admin/reserva-especial/reserva-especial.controller.js"></script>
+	<script src="app/admin/inicio/inicio.controller.js"></script>
+	<script src="app/admin/impresion-factura/impresion-factura.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -96,6 +98,8 @@
 	<script src="app/servicios/reserva.service.js"></script>
 	<script src="app/servicios/cliente.service.js"></script>
 	<script src="app/servicios/reserva-especial.service.js"></script>
+	<script src="app/servicios/factura-cliente.service.js"></script>
+	<script src="app/servicios/factura-reserva.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
@@ -118,5 +122,11 @@
 
 	<!-- EASYCAL JS -->
 	<script src="lib/easycal/easycal.js"></script>
+
+	<!-- PDF MAKE -->
+	<script src="lib/pdfmake/pdfmake.min.js"></script>
+	<script src="lib/pdfmake/vfs_fonts.js"></script>
+	<!-- NUMEROS A LETRAS -->
+	<script src="lib/numerosAletras/NumeroALetras.js"></script>
 </body>
 </html>
