se pueden imprimir facturas para las reservas

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -103,6 +103,7 @@
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
+	<script src="common/common.run.js"></script>
 	<script src="common/cabecera-pagina/cabecera-pagina.directive.js"></script>
 	<script src="common/subir-archivo/subir-archivo.directive.js"></script>
 	<script src="common/calendario/calendario.directive.js"></script>
