--- a/complejoapp/app/admin/impresion-factura/impresion-factura.view.html
+++ b/complejoapp/app/admin/impresion-factura/impresion-factura.view.html
@@ -1,8 +1,20 @@
 
 <cd-cabecera-pagina nombrecomplejo="{{complejo.nombre}}" datospagina="vm.datospagina"></cd-cabecera-pagina>
 
-<div class="btn-group">
-	<button type="button" class="btn btn-warning" ng-click="vm.imprimir()">Imprimir Factura</button>
-	<button type="button" class="btn btn-danger" ng-click="vm.abrir()">Abrir Factura</button>
-	<button type="button" class="btn btn-info" ng-click="vm.descargar()">Descargar Factura</button>
+<!-- BOTONES DE CONTROL PARA LOS RECIBOS IMPRESION, IMPRIMIR Y DESCARGAR -->
+<div class="row">
+	<div class="col-lg-6">
+		<div class="btn-group btn-group-justified" role="group" aria-label="...">
+			<div class="btn-group" role="group">
+				<button type="button" class="btn btn-warning" ng-click="vm.abrir()">Abrir <span class="hidden-xs">Recibo</span></button>
+			</div>
+			<div class="btn-group" role="group">
+				<button type="button" class="btn btn-danger" ng-click="vm.imprimir()">Imprimir <span class="hidden-xs">Recibo</span></button>
+			</div>
+			<div class="btn-group" role="group">
+				<button type="button" class="btn btn-info" ng-click="vm.descargar()">Descargar <span class="hidden-xs">Recibo</span></button>
+			</div>
+		</div>
+	</div>
 </div>
+<!-- FIN BOTONES DE CONTROL -->
