--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -100,6 +100,7 @@
 	<script src="app/servicios/reserva-especial.service.js"></script>
 	<script src="app/servicios/factura-cliente.service.js"></script>
 	<script src="app/servicios/factura-reserva.service.js"></script>
+	<script src="app/servicios/usuario-funcion.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
