implementado la directiva para cargar las funciones deacuerdo al rol

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -110,6 +110,7 @@
 	<script src="common/calendario/calendario.directive.js"></script>
 	<script src="common/calendario/calendario.service.js"></script>
 	<script src="common/hora-filtro/hora.filtro.js"></script>
+	<script src="common/sidebar-menu/sidebar-menu.directive.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
