--- a/complejoapp/app/admin/admin.layout.html
+++ b/complejoapp/app/admin/admin.layout.html
@@ -55,14 +55,7 @@
                 </li>
             </ul>
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
-            <div class="collapse navbar-collapse navbar-ex1-collapse">
-                <ul class="nav navbar-nav side-nav">
-                    <li ng-repeat="funcion in funciones">
-                        <a ui-sref={{funcion.estado}} data-toggle="collapse" data-target=".navbar-ex1-collapse"><i class={{funcion.icono}}></i> {{funcion.nombre}}</a>
-                    </li>
-                    
-                </ul>
-            </div>
+            <cd-sidebar funciones="funciones"></cd-sidebar>
             <!-- /.navbar-collapse -->
         </nav>
 
