agregado las rutas para el cliente

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -86,6 +86,8 @@
 	<!-- SCRIPTS MODULO CLIENTE -->
 	<script src="app/cliente/cliente.module.js"></script>
 	<script src="app/cliente/cliente.routes.js"></script>
+	<script src="app/cliente/cliente-layout.controller.js"></script>
+	<script src="app/cliente/prereserva/prereserva.controller.js"></script>
 
 	<!-- SCRIPTS MODULO SERVICIOS -->
 	<script src="app/servicios/servicios.module.js"></script>
