implementado la vista para realizar prereservas de campos

--- a/complejoapp/common/cabecera-pagina/cabecera-pagina.directive.html
+++ b/complejoapp/common/cabecera-pagina/cabecera-pagina.directive.html
@@ -3,7 +3,7 @@
     <div class="row">
         <div class="col-xs-12">
             <h1 class="page-header">
-                Complejo {{nombrecomplejo}} <small>{{datospagina.nombrepagina}}</small>
+                 {{nombrecomplejo}} <small>{{datospagina.nombrepagina}}</small>
             </h1>
             <ol class="breadcrumb">
                 <li class="active">
