--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -88,6 +88,7 @@
 	<script src="app/cliente/cliente.routes.js"></script>
 	<script src="app/cliente/cliente-layout.controller.js"></script>
 	<script src="app/cliente/prereserva/prereserva.controller.js"></script>
+	<script src="app/cliente/prereserva/cliente-complejo.service.js"></script>
 
 	<!-- SCRIPTS MODULO SERVICIOS -->
 	<script src="app/servicios/servicios.module.js"></script>
@@ -113,6 +114,7 @@
 	<script src="common/calendario/calendario.service.js"></script>
 	<script src="common/hora-filtro/hora.filtro.js"></script>
 	<script src="common/sidebar-menu/sidebar-menu.directive.js"></script>
+	<script src="common/imagen-filtro/imagenFilter.js"></script>
 
 	<!-- SCRIPTS DE LA APLICACION -->
 
