--- a/complejoapp/app/cliente/cliente-layout.html
+++ b/complejoapp/app/cliente/cliente-layout.html
@@ -21,7 +21,7 @@
                         <a href=""><i class="fa fa-fw fa-user"></i> Perfil</a>
                     </li>
                     <li class="divider"></li>
-                    <li ng-click="cerrarSesion()">
+                    <li ng-click="vm.logout()">
                         <a href=""><i class="fa fa-fw fa-power-off"></i> Cerrar Sesion</a>
                     </li>
                 </ul>
