--- a/complejoapp/app/admin/reserva/reserva.view.html
+++ b/complejoapp/app/admin/reserva/reserva.view.html
@@ -19,7 +19,7 @@
 							<form novalidate name="reservaform" ng-submit="reservar(campo, clienteSeleccionado, horaFin, tipoperiodico, veces)">
 								<div class="col-lg-6">
 									<div class="form-group">
-										<img class="img-rounded" alt="Cinque Terre" width="100%" height="120" ng-src="http://localhost/compleapp/complejoapprest/{{campo.foto}}">
+										<img class="img-rounded" alt="Cinque Terre" width="100%" height="120" ng-src="{{campo.foto | imagenFilter}}">
 									</div>
 
 									<div class="form-group">
