implementado la vista y servicios en angular para la confirmacion de prereservas

--- a/complejoapp/index.html
+++ b/complejoapp/index.html
@@ -77,6 +77,7 @@
 	<script src="app/admin/reserva-especial/reserva-especial.controller.js"></script>
 	<script src="app/admin/inicio/inicio.controller.js"></script>
 	<script src="app/admin/impresion-factura/impresion-factura.controller.js"></script>
+	<script src="app/admin/confirmar-prereserva/prereserva.controller.js"></script>
 
 	<!-- SCRIPTS MODULO VISITANTES -->
 	<script src="app/visitante/visitante.module.js"></script>
@@ -105,6 +106,7 @@
 	<script src="app/servicios/factura-reserva.service.js"></script>
 	<script src="app/servicios/usuario-funcion.service.js"></script>
 	<script src="app/servicios/prereserva.service.js"></script>
+	<script src="app/servicios/com-prereserva.service.js"></script>
 
 	<!-- SCRIPTS MODULO DE COMPONENTES Y DIRECTIVAS COMUNES A TODA LA APLICACION-->
 	<script src="common/common.module.js"></script>
