--- a/complejoapp/common/cabecera-pagina/cabecera-pagina.directive.html
+++ b/complejoapp/common/cabecera-pagina/cabecera-pagina.directive.html
@@ -6,6 +6,9 @@
                  {{nombrecomplejo}} <small>{{datospagina.nombrepagina}}</small>
             </h1>
             <ol class="breadcrumb">
+                <li>
+                    <i class="fa fa-dashboard"></i>  <a ui-sref="app.admin.inicio">Inicio</a>
+                </li>
                 <li class="active">
                     <i class="{{datospagina.icono}}"></i> {{datospagina.nombrepagina}}
                 </li>
